name:                standardYoungTableaux
version:             0.1.0.0
-- synopsis:
description:         Standard Young tableaux.
homepage:            https://github.com/stla/standardYoungTableaux#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2021 Stéphane Laurent
category:            Mathematics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Enumeration
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

benchmark criterion-benchmarks
  build-depends:    base
                  , criterion
                  , standardYoungTableaux
                  , combinat
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   benchmarks
  main-is:          CriterionBenchmarks.hs
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/stla/standardYoungTableaux
